# libVideoDeCoGPU

./: CMakeLists.txt  README.md  bgfg_segm_cpu.cpp  bgfg_segm_gpu.cpp  compile.sh
